[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/UserInterface/Main.gd" type="Script" id=1]
[ext_resource path="res://src/UserInterface/TransitionScreen.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/UserInterface/Menus/MainTitle.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/UserInterface/Menus/Configuration.tscn" type="PackedScene" id=4]

[node name="MainGame" type="Node2D"]
script = ExtResource( 1 )

[node name="MenuLayer" type="CanvasLayer" parent="."]

[node name="MainTitle" parent="MenuLayer" instance=ExtResource( 3 )]

[node name="ConfigurationLayer" type="CanvasLayer" parent="."]

[node name="Configuration" parent="ConfigurationLayer" instance=ExtResource( 4 )]
visible = false

[node name="TransitionLayer" parent="." instance=ExtResource( 2 )]

[connection signal="exit_game" from="MenuLayer/MainTitle" to="." method="_on_exit_emitted"]
[connection signal="goto_next_scene" from="MenuLayer/MainTitle" to="." method="_on_goto_scene"]
[connection signal="goto_prev_scene" from="MenuLayer/MainTitle" to="." method="_on_goto_scene"]
[connection signal="toggle_configuration" from="MenuLayer/MainTitle" to="." method="_on_toggle_configuration"]
[connection signal="toggle_configuration" from="ConfigurationLayer/Configuration" to="." method="_on_toggle_configuration"]
